# OOP-Course-Project

./: CMakeLists.txt  Prezentacija - Praktikum.pptx  README.md
resource/: categories.csv  item_types.csv
src/: GenericException.h  main.cpp  user.cpp  user.h  user_database.cpp  user_database.h
src/inventory/: inventory.cpp  inventory.h  item.cpp  item.h  item_stock_information_object.cpp  item_stock_information_object.h
src/inventory/category/: category.cpp  category.h  category_database.cpp  category_database.h  category_validator.cpp  category_validator.h
src/inventory/category/loader/: category_loader.h  file_category_loader.cpp  file_category_loader.h
src/inventory/item_type/: item_type.cpp  item_type.h  item_type_database.cpp  item_type_database.h
src/inventory/item_type/loader/: file_item_type_loader.cpp  file_item_type_loader.h  item_type_loader.cpp  item_type_loader.h
src/menu/: category_selection_menu.cpp  category_selection_menu.h  item_menu.cpp  item_menu.h  items_menu.cpp  items_menu.h  logged_in_menu.cpp  logged_in_menu.h  menu.cpp  menu.h  menu_option.cpp  menu_option.h  menu_option_doesnt_exist_exception.h  show_items_start_menu.cpp  show_items_start_menu.h  show_user_menu.cpp  show_user_menu.h  start_menu.cpp  start_menu.h
src/session/: session.cpp  session.h
src/utility/: general_utility.h
src/utility/category/: category_printer.cpp  category_printer.h
src/utility/database/: database.h  item_already_exists_exception.h  item_doesnt_exist_exception.h  loader.h
src/utility/string/: string_library.cpp  string_library.h
